LWC/force-app/main/default/objects/Account/fields/BBC_news__c.field-meta.xml
<CustomField>
    <fullName>BBC_news__c</fullName>
    <formula>HYPERLINK(&apos;http://www.bbc.co.uk/search?q=&apos;&amp;Name, &apos;BBC NEWS&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BBC news</label>
    <type>Text</type>
</CustomField>