LWC/force-app/main/default/objects/Account/fields/hospital_ref_code__c.field-meta.xml
<CustomField>
    <fullName>hospital_ref_code__c</fullName>
    <label>Hospital Ref Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>