LWC/force-app/main/default/objects/Account/fields/News_Of_the_day__c.field-meta.xml
<CustomField>
    <fullName>News_Of_the_day__c</fullName>
    <formula>HYPERLINK(&quot;http://bbc.co.uk/search?q=&quot; &amp;Name, &quot;BBC News&quot;)</formula>
    <label>News Of the day</label>
    <type>Text</type>
</CustomField>